my_test_finizens

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,3 +1,4 @@
+
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
@@ -13,9 +14,9 @@ doctrine:
         mappings:
             App:
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                dir: '%kernel.project_dir%/src/Domain/Entity'
+                prefix: 'Domain\Entity'
+                alias: 'Domain'
 
 when@test:
     doctrine:
