--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,18 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+
+
+    # Init repositories as a service manually
+    Domain\Repository\:
+        resource: '../src/Domain/Repository'
+        autowire: true
+        public: true
+        tags: ['doctrine.repository_service']
+
+    # Auto-wiring all domain services
+    Domain\Services\:
+        resource: '../src/Domain/Services'
+        autowire: true
+        public: true
