finish my test degusta box

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=fad997dad548b067ccace02d31f64b57
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/my_test_degusta_box"
+DATABASE_URL="mysql://root:bd&testlocal123@db:3306/my_test_degusta_box"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
